ensure diff-dialog filenames have same height as added/deleted line-count buttons to ensure vertical alignment

--- a/app/assets/stylesheets/history_diff.css.scss
+++ b/app/assets/stylesheets/history_diff.css.scss
@@ -118,16 +118,10 @@
   padding: none !important;
   margin: 0px;
 
-  .filename {
-    text-align: right;
-    font-size: 16px;
-    padding-right: 3px;
-  }
-
-  #diff-filenames { height: 450px; }
   .diff-line-numbers, .diff-sheet { height: 540px; }
 
   #diff-filenames {
+    height: 450px;
     margin-top: 15px;
     max-width: 200px;
     overflow-y: none;
@@ -137,6 +131,18 @@
     font-size: 11pt;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+
+    .filename {
+      text-align: right;
+      font-size: 16px;
+      // total height has to be the same as diff-(added/deleted)-line-counts so they vertically align
+      height: 16px;
+      padding-right: 3px;
+      padding-top: 0px;
+      padding-bottom: 4px;
+      border: 1px solid $darker-color;
+      margin-bottom: 2px;
+    }
   }
 
   .diff-line-numbers, .diff-sheet {
